--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -16,7 +16,7 @@ units=$(SYSTEMUNIT) objpas macpas strings syscall sysctl unixtype baseunix unixu
       sysutils typinfo systhrds types classes math varutils dynlibs \
       cpu mmx charset ucomplex crt getopts heaptrc lineinfo \
       errors sockets ipc terminfo \
-      video mouse keyboard console serial variants  sysctl dateutils \
+      video mouse keyboard console serial variants dateutils \
       sysconst cthreads strutils convutils
 
 rsts=math varutils typinfo classes variants dateutils sysconst
