--- a/rtl/netware/Makefile.fpc
+++ b/rtl/netware/Makefile.fpc
@@ -16,7 +16,7 @@ units=$(SYSTEMUNIT) systhrds objpas macpas strings \
       video mouse keyboard types dateutils rtlconst sysconst \
       strutils convutils \
       aio nwsnut nwserv nwnit nwprot
-rsts=math varutils typinfo classes dateutils sysconst
+rsts=math varutils typinfo classes dateutils sysconst convutils rtlconst systhrds
 
 [require]
 nortl=y
@@ -119,10 +119,8 @@ systhrds$(PPUEXT): systhrds.pp $(INC)/threadh.inc $(SYSTEMUNIT)$(PPUEXT) objpas$
 #
 
 netware$(PPUEXT) : netware.pp $(SYSTEMUNIT)$(PPUEXT)
-        $(COMPILER) -I$(WININC) netware.pp
 
-
-winsock2$(PPUEXT) : winsock2.pp qos.inc netware$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
+winsock$(PPUEXT) : winsock.pp $(SYSTEMUNIT)$(PPUEXT)
 
 sockets$(PPUEXT) : sockets.pp netware$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
                    $(INC)/sockets.inc $(INC)/socketsh.inc
