--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -37,6 +37,9 @@ endif
 ifeq ($(CPU_TARGET),powerpc)
 PPSUF=ppc
 endif
+ifeq ($(CPU_TARGET),sparc)
+PPSUF=sparc
+endif
 ifeq ($(CPU_TARGET),alpha)
 PPSUF=axp
 endif
