--- a/install/debian/control
+++ b/install/debian/control
@@ -6,8 +6,8 @@ Standards-Version: 3.6.1
 Build-Depends: fp-compiler, fp-utils, debhelper (>= 4.2), tetex-bin, tetex-extra, awk, gs-common
 
 Package: fp-compiler
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921)
 Suggests: fp-utils, fp-docs (>= 1.9.5)
 Description: Free Pascal -- Compiler
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -19,8 +19,8 @@ Description: Free Pascal -- Compiler
  compiling anything.
 
 Package: fp-utils
-Architecture: i386 powerpc amd64
-Recommends: fp-compiler (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Recommends: fp-compiler (= 1.9.5-20040921)
 Description: Free Pascal -- Utils
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -46,16 +46,16 @@ Description: Free Pascal -- Documentation
  The documentation is available in HTML and in PDF.
 
 Package: fp-units-rtl
-Architecture: i386 powerpc amd64
-Recommends: fp-compiler (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Recommends: fp-compiler (= 1.9.5-20040921)
 Description: Free Pascal -- Runtime Library
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the Runtime Libraries for the Free Pascal Compiler.
 
 Package: fp-units-base
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921)
 Description: Free Pascal -- base units
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -66,16 +66,16 @@ Description: Free Pascal -- base units
   - ZLib
 
 Package: fp-units-fcl
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817), fp-units-base (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-base (= 1.9.5-20040921)
 Description: Free Pascal -- Free Component Library
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the Free Component Library for the Free Pascal Compiler.
 
 Package: fp-units-gtk
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817), fp-units-fcl (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-fcl (= 1.9.5-20040921)
 Description: Free Pascal -- GTK 1.2 units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -83,8 +83,8 @@ Description: Free Pascal -- GTK 1.2 units
  programs with GTK 1.2.
 
 Package: fp-units-gnome1
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817), fp-units-gtk (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-gtk (= 1.9.5-20040921)
 Description: Free Pascal -- GNOME 1 units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -92,8 +92,8 @@ Description: Free Pascal -- GNOME 1 units
  programs for GNOME 1.
 
 Package: fp-units-db
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921)
 Description: Free Pascal -- database libraries units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -107,8 +107,8 @@ Description: Free Pascal -- database libraries units
   - SQLite
   
 Package: fp-units-gfx
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817), fp-units-base (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-base (= 1.9.5-20040921)
 Description: Free Pascal -- graphics libraries units
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -119,8 +119,8 @@ Description: Free Pascal -- graphics libraries units
   - OpenGL
 
 Package: fp-units-net
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921)
 Description: Free Pascal -- networking units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
@@ -129,8 +129,8 @@ Description: Free Pascal -- networking units
   - UnCGI unit for easy CGI handling
 
 Package: fp-units-misc
-Architecture: i386 powerpc amd64
-Depends: fp-units-rtl (= 1.9.5-20040817)
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.5-20040921)
 Description: Free Pascal -- miscellaneous units
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
