--- a/install/debian/control.in
+++ b/install/debian/control.in
@@ -6,7 +6,7 @@ Standards-Version: 3.6.1
 Build-Depends: fp-compiler, fp-utils, debhelper (>= 4.2), tetex-bin, tetex-extra, awk, gs-common
 
 Package: fp-compiler
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Suggests: fp-utils, fp-docs (>= %{fpcversion})
 Description: Free Pascal -- Compiler
@@ -19,7 +19,7 @@ Description: Free Pascal -- Compiler
  compiling anything.
 
 Package: fp-utils
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Recommends: fp-compiler (= %{packageversion})
 Description: Free Pascal -- Utils
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -46,7 +46,7 @@ Description: Free Pascal -- Documentation
  The documentation is available in HTML and in PDF.
 
 Package: fp-units-rtl
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Recommends: fp-compiler (= %{packageversion})
 Description: Free Pascal -- Runtime Library
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -54,7 +54,7 @@ Description: Free Pascal -- Runtime Library
  This package contains the Runtime Libraries for the Free Pascal Compiler.
 
 Package: fp-units-base
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- base units
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -66,7 +66,7 @@ Description: Free Pascal -- base units
   - ZLib
 
 Package: fp-units-fcl
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-base (= %{packageversion})
 Description: Free Pascal -- Free Component Library
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -74,7 +74,7 @@ Description: Free Pascal -- Free Component Library
  This package contains the Free Component Library for the Free Pascal Compiler.
 
 Package: fp-units-gtk
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-fcl (= %{packageversion})
 Description: Free Pascal -- GTK 1.2 units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -83,7 +83,7 @@ Description: Free Pascal -- GTK 1.2 units
  programs with GTK 1.2.
 
 Package: fp-units-gnome1
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-gtk (= %{packageversion})
 Description: Free Pascal -- GNOME 1 units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -92,7 +92,7 @@ Description: Free Pascal -- GNOME 1 units
  programs for GNOME 1.
 
 Package: fp-units-db
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- database libraries units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -107,7 +107,7 @@ Description: Free Pascal -- database libraries units
   - SQLite
   
 Package: fp-units-gfx
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-base (= %{packageversion})
 Description: Free Pascal -- graphics libraries units
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -119,7 +119,7 @@ Description: Free Pascal -- graphics libraries units
   - OpenGL
 
 Package: fp-units-net
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- networking units 
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
@@ -129,7 +129,7 @@ Description: Free Pascal -- networking units
   - UnCGI unit for easy CGI handling
 
 Package: fp-units-misc
-Architecture: i386 powerpc amd64
+Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- miscellaneous units
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
