--- a/packages/extra/x11/Makefile.fpc
+++ b/packages/extra/x11/Makefile.fpc
@@ -7,7 +7,7 @@ name=x11
 version=1.9.4
 
 [target]
-units=x xlib xutil xresource xcms xshm xrender keysym
+units=x xlib xutil xresource xcms xshm xrender keysym xi
 
 [require]
 libc=y
