+ Fixed some dependencies

--- a/fcl/db/Makefile.fpc
+++ b/fcl/db/Makefile.fpc
@@ -30,7 +30,7 @@ fpcdir=../..
 
 
 [rules]
-db$(PPUEXT): db.pp fields.inc dataset.inc dbs.inc
+db$(PPUEXT): dbconst$(PPUEXT) db.pp bufdataset.inc  database.inc dataset.inc  datasource.inc  fields.inc
 
 ddg_ds$(PPUEXT): db$(PPUEXT) ddg_rec$(PPUEXT) ddg_ds.pp
 
