--- a/fcl/db/dbase/Makefile.fpc
+++ b/fcl/db/dbase/Makefile.fpc
@@ -31,8 +31,8 @@ units=dbf_common dbf_cursor dbf_dbffile dbf_fields dbf_idxcur \
 # dbf_Wtil is needed on all targets except win32
 ifeq ($(CPU_TARGET),i386)
 ifneq ($(OS_TARGET),win32)
-INSTALL_UNITS+=dbf_Wtil
-CLEAN_UNITS+=dbf_Wtil
+INSTALL_UNITS+=dbf_wtil
+CLEAN_UNITS+=dbf_wtil
 endif
 endif
 
