* dos en objects naar het eind

--- a/rtl/freebsd/Makefile
+++ b/rtl/freebsd/Makefile
@@ -246,7 +246,7 @@ GRAPHDIR=$(INC)/graph
 ifndef USELIBGGI
 USELIBGGI=NO
 endif
-override TARGET_UNITS+=$(SYSTEMUNIT) objpas macpas strings syscall sysctl unixtype baseunix unixutil unix rtlconst initc cmem matrix dos dl termio objects printer sysutils typinfo systhrds types classes math varutils dynlibs cpu mmx charset ucomplex crt getopts heaptrc lineinfo errors sockets ipc terminfo video mouse keyboard console serial variants dateutils sysconst cthreads strutils convutils
+override TARGET_UNITS+=$(SYSTEMUNIT) objpas macpas strings syscall sysctl unixtype baseunix unixutil unix rtlconst initc cmem matrix dl termio  printer sysutils typinfo systhrds types classes math varutils dynlibs cpu mmx charset ucomplex crt getopts heaptrc lineinfo errors sockets ipc terminfo video mouse keyboard console serial variants dateutils sysconst cthreads strutils convutils dos objects
 override TARGET_LOADERS+=prt0 cprt0 gprt0
 override TARGET_RSTS+=math varutils typinfo classes variants dateutils sysconst
 override INSTALL_FPCPACKAGE=y y
