--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -12,12 +12,12 @@ fpcpackage=y
 loaders=prt0 cprt0 gprt0
 units=$(SYSTEMUNIT) objpas macpas strings syscall sysctl unixtype baseunix unixutil \
       unix rtlconst initc cmem matrix \
-      dos dl termio objects printer \
+       dl termio  printer \
       sysutils typinfo systhrds types classes math varutils dynlibs \
       cpu mmx charset ucomplex crt getopts heaptrc lineinfo \
       errors sockets ipc terminfo \
       video mouse keyboard console serial variants dateutils \
-      sysconst cthreads strutils convutils
+      sysconst cthreads strutils convutils dos objects
 
 rsts=math varutils typinfo classes variants dateutils sysconst
 
